--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         }
 
         .portfolio-remaining {
-            margin-top: 60px;
+            margin-top: 30px; /* Tighter spacing between portfolio1 and portfolio2 */
             max-width: 1400px;
             margin-left: auto;
             margin-right: auto;
@@ -95,7 +95,7 @@
         }
 
         .portfolio-remaining figure {
-            margin-bottom: 60px;
+            margin-bottom: 30px; /* Tighter consistent spacing between all images */
         }
 
         /* Make remaining portfolio images same size as portfolio1 - left aligned */
@@ -116,20 +116,20 @@
             max-width: 60%; /* Match image width */
         }
 
-        /* Mobile spacing adjustments ONLY */
+        /* Mobile spacing adjustments */
         @media (max-width: 768px) {
             .bio-section {
-                margin-top: 30px; /* Reduce top margin */
-                padding: 0 20px; /* Reduce side padding */
+                margin-top: 30px;
+                padding: 0 20px;
             }
 
             .portfolio-remaining {
-                margin-top: 30px; /* Reduce gap between portfolio1 and portfolio2 */
-                padding: 0 20px; /* Reduce side padding */
+                margin-top: 30px;
+                padding: 0 20px;
             }
 
             .portfolio-remaining figure {
-                margin-bottom: 30px; /* Reduce gap between portfolio images */
+                margin-bottom: 30px; /* Same as desktop for consistency */
             }
         }
     </style>
