--- a/index.html
+++ b/index.html
@@ -118,13 +118,24 @@
         /* Mobile adjustments */
         @media (max-width: 768px) {
             .bio-section {
-                margin-top: 20px;
+                margin-top: 15px; /* Reduce this dramatically */
+                margin-bottom: 0; /* No bottom margin */
                 padding: 0 20px;
-                gap: 20px;
+                gap: 15px; /* Smaller gap between columns */
+            }
+
+            .bio-photo {
+                max-width: 200px; /* Make bio photo smaller on mobile */
+                margin-bottom: 8px;
+            }
+
+            .bio-text {
+                font-size: 12px; /* Smaller text on mobile */
+                line-height: 1.6;
             }
 
             .portfolio-remaining {
-                margin-top: 20px; /* Even tighter gap on mobile */
+                margin-top: 15px; /* MUCH tighter - this is the key! */
                 padding: 0 20px;
             }
 
