--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         .portfolio-first {
             flex: 1;
             max-width: 60%;
+            margin-bottom: 0; /* No extra bottom margin */
         }
 
         .portfolio-first img {
@@ -62,6 +63,7 @@
 
         .portfolio-first figcaption {
             margin-top: 12px;
+            margin-bottom: 0; /* No bottom margin on caption */
             font-size: 14px;
             font-style: italic;
             color: #555;
@@ -118,24 +120,39 @@
         /* Mobile adjustments */
         @media (max-width: 768px) {
             .bio-section {
-                margin-top: 15px; /* Reduce this dramatically */
-                margin-bottom: 0; /* No bottom margin */
+                margin-top: 15px;
                 padding: 0 20px;
-                gap: 15px; /* Smaller gap between columns */
+                gap: 15px;
+                /* KEY: Allow bio column to position absolutely so it doesn't push content down */
+                position: relative;
+                margin-bottom: 0;
+            }
+
+            .portfolio-first {
+                /* This stays in normal flow */
+                max-width: 60%;
+            }
+
+            .bio-column {
+                /* Position this so it doesn't create vertical space */
+                position: absolute;
+                right: 20px;
+                top: 0;
+                max-width: 35%;
             }
 
             .bio-photo {
-                max-width: 200px; /* Make bio photo smaller on mobile */
+                max-width: 150px;
                 margin-bottom: 8px;
             }
 
             .bio-text {
-                font-size: 12px; /* Smaller text on mobile */
-                line-height: 1.6;
+                font-size: 11px;
+                line-height: 1.5;
             }
 
             .portfolio-remaining {
-                margin-top: 15px; /* MUCH tighter - this is the key! */
+                margin-top: 20px; /* Small gap after portfolio1 caption */
                 padding: 0 20px;
             }
 
